third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/overwrite-10.stderr
TOML parse error at line 4, column 6
  |
4 | a = {b.a = 1, b = 2, b.c = 3}
  |      ^
duplicate key `b`
